tester/testsuite/extensions/functions/bad/assignedfunction.jl
int main() {
    int obj() {
        return 0;
    }

    int lol() {
        return 10;
    }

    obj = lol;

    return 0;
}
